Swagger files fixed, @Router paths fixed without "app/v1" prefix. Stable docker setup.
